--- a/dispatch/ximysql/readme
+++ b/dispatch/ximysql/readme
@@ -1,2 +1,2 @@
-This is the Xplico System implementation of output data storage.
+This is the Xplico System implementation of output data storage on MySQL.
 
