--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,14 @@
+xplico (1.2.0) stable; urgency=low
+  * Migration from PHP5 to PHP7
+  * CakePHP 2.8
+  * IMAP bug fix
+  * Bugfix: reported on Security Onion
+ -- Gianluca Costa <g.costa@xplico.org>  Sun, 15 Jan 2017 11:10:00 +0200
+
 xplico (1.1.2) stable; urgency=low
   * IPv4 defragmentation
   * CapAnalysis dissectors and dispatcher
- -- Gianluca Costa <g.costa@xplico.org>  Sun, 27 Dec 2016 12:00:00 +0200
+ -- Gianluca Costa <g.costa@xplico.org>  Sun, 10 Jan 2016 12:00:00 +0200
 
 xplico (1.1.1) stable; urgency=low
   * Whatsapp OS and Phone number
