--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+xplico 1.2.1
+  * Bugfix: WUI: added check in the registration page; added the file name check on the pcap upload page
+
 xplico 1.2.0
   * Migration from PHP5 to PHP7
   * CakePHP 2.8
