--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xplico (1.2.2) stable; urgency=low
+  * CakePHP 2.10.17
+  * Migration from GeoIP to GeoIP2
+  * nDPI updated
+ -- Gianluca Costa <g.costa@xplico.org>  Thu, 25 Apr 2019 14:10:00 +0200
+ 
 xplico (1.2.1) stable; urgency=low
   * Bugfix: WUI: added check in the registration page; added the file name check on the pcap upload page
  -- Gianluca Costa <g.costa@xplico.org>  Sun, 12 Dec 2017 09:10:00 +0200
